[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/ui_italics.tres" type="Material" id=1]
[ext_resource path="res://ui/ui_theme_numerics.tres" type="Theme" id=2]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/game_ui.gd" type="Script" id=4]
[ext_resource path="res://ui/text-bar.png" type="Texture" id=5]
[ext_resource path="res://ui/gauge.png" type="Texture" id=6]
[ext_resource path="res://ui/gauge-progress.png" type="Texture" id=7]
[ext_resource path="res://ui/power_gauge.gd" type="Script" id=8]
[ext_resource path="res://ui/warning_label.gd" type="Script" id=9]
[ext_resource path="res://ui/score_text.gd" type="Script" id=10]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.446961, 0.585221 )
colors = PoolColorArray( 0.423529, 0.188235, 0.639216, 0.819608, 0.243137, 0.858824, 1, 0.819608 )

[node name="GameUI" type="Control"]
anchor_left = -0.5
anchor_top = -0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 4 )

[node name="Score" type="Control" parent="."]
margin_top = -3.0
margin_right = 160.0
margin_bottom = 29.0

[node name="Base" type="TextureRect" parent="Score"]
modulate = Color( 0.168627, 0.14902, 0.14902, 0.701961 )
margin_left = -32.0
margin_right = 128.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="ScoreLabel" type="Label" parent="Score"]
modulate = Color( 1, 0.913725, 0.784314, 1 )
material = ExtResource( 1 )
margin_left = 3.0
margin_top = 9.0
margin_right = 75.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = " Score"

[node name="ScoreText" type="Label" parent="Score"]
unique_name_in_owner = true
material = ExtResource( 1 )
margin_left = 40.0
margin_top = 3.0
margin_right = 130.0
margin_bottom = 27.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.984314, 0.560784, 1 )
text = "0000000"
script = ExtResource( 10 )

[node name="Power" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -27.0
margin_right = 160.0
margin_bottom = 5.0

[node name="Under" type="TextureRect" parent="Power"]
modulate = Color( 0.168627, 0.14902, 0.14902, 0.25098 )
margin_right = 145.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="PowerGauge" type="TextureProgress" parent="Power"]
unique_name_in_owner = true
margin_left = 41.0
margin_top = 9.0
margin_right = 141.0
margin_bottom = 23.0
value = 47.0
texture_progress = ExtResource( 7 )
tint_progress = Color( 0.243137, 0.858824, 1, 0.819608 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1
script = ExtResource( 8 )
override_progress_gradient = SubResource( 1 )

[node name="LowPowerWarning" type="Label" parent="Power/PowerGauge"]
unique_name_in_owner = true
material = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.839216, 0.254902, 0.254902, 1 )
text = "! !  LOW POWER  ! !"
align = 1
valign = 1
script = ExtResource( 9 )

[node name="Over" type="TextureRect" parent="Power"]
modulate = Color( 0.168627, 0.14902, 0.14902, 0.94902 )
margin_right = 145.0
margin_bottom = 32.0
texture = ExtResource( 6 )
expand = true

[node name="PowerLabel" type="Label" parent="Power"]
material = ExtResource( 1 )
margin_left = 3.0
margin_top = 9.0
margin_right = 75.0
margin_bottom = 21.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.843137, 0.941176, 1, 1 )
text = " Power"
